2005-03-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (main): add png for HTML too, guess
	only if necessary. Thanks to John Williams.

	* flower/include/virtual-methods.hh: simplify. Patch by Matthias
	Neeracher.

	* mf/GNUmakefile (depth): use $(FONTFORGE). Patch by Jeff Smith
	<whydoubt@yahoo.com>

	* scripts/abc2ly.py (dump_voices): use alphabet(). 

2005-03-25  Graham Percival  <gperlist@shaw.ca>

	* Documentation/topdocs/INSTALL.texi: now recommends
	lexer-gcc-3.1.sh for gcc 3.1.1 or higher.

	* Documentation/user/basic-notation.itely,
	Documentation/user/tutoria.itely: warn about
	only one (phrasing) slur at once.

2005-03-24  Pedro Kroger  <kroeger@pedrokroeger.net>

	* ly/music-functions-init.ly (removeWithTag): fixed to return "music".

2005-03-23  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/basic-notation.itely: fixed info about
	ending a (de)cresc.

	* Documentation/user/lilypond-book.itely: fixed
	lilypond-book filter example and warned about not doing
	--filter and --process at the same time.

2005-03-23  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/parser.yy (bass_number),
	Documentation/user/instrument-notation.itely (Figured bass): 
	Add the possibility to use text markup in figured bass. 

2005-03-19  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/global.itely: added info about naming
	identifiers and breakbefore.

	* Documentation/user/invoking.itely: added info about batch
	processing files with convert-ly, removed references to TeX
	in the jail section.

	* Documentation/user/examples.itely: possibly fixed piano
	dynamics.

	* Documentation/user/advanced-notation.itely: added info
	about removing other types of Staff.

	* Documentation/user/instrument-notation.itely: possibly
	fixed piano staff line switch.

	* Documentation/user/changing-defaults.itely: added info
	about using normal font in titles.

2005-03-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PATCH_LEVEL): release 2.5.16