@@ -1,3 +1,7 @@
+2005-03-27  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scripts/convert-ly.py: Python 2.2 compatibility (thanks Mats).
+
 2005-03-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* scripts/lilypond-book.py (main): add png for HTML too, guess
